PDFBOX-2576: use !equals instead of !=; use Integer.valueOf() instead of new Integer()
git-svn-id: https://svn.apache.org/repos/asf/pdfbox/trunk@1686468 13f79535-47bb-0310-9956-ffa450edef68